Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -108,9 +108,10 @@ fraction to get a quantitative overview of the abatable fractions.
 
 
 %Ozone Sverre
-Trends in six annual percentiles of daily maximum O$_3$ as well as three aggregated metrics (AOT40 for crops, AOT40 for forests and SOMO35) were calculated for the period 2000-2019. For the high percentiles as well as for the three aggregated metrics both the model values and the observations show a decrease during this period when averaged over the stations. The observations show a mean decrease of 0.5-1.5 \% $yr^{-1}$ relative to 2000 over this 20 years period for the three aggregated metrics while the model calculates somewhat larger reductions, of the order of 0.9-2\% $yr^{-1}$. For the 99th percentile of the annual daily maximum values, corresponding to the 4th highest ozone concentration, the mean of the observed and modelled values agree very well for sites north of 49 \degrees N, both showing a reduction of the order of 0.5  \% $yr^{-1}$ relative to 2000. For sites south of 49 \degrees N the observations show a similar relative reduction on average whereas the model calculates stronger reductions. Comparisons of the observed and modelled absolute concentration levels of O$_3$ reveal that the model underpredicts the high percentile and overpredicts the AOT40 levels. The underprediction increases with higher percentiles and is strongest for sites south of 49 \degrees N. The modelled downwrad trend in the high percentiles is, however, of the same order if comparing absolute levels. For SOMO35, the trend in the model values agrees well with the observed levels.
+Trends in six annual percentiles of daily maximum O$_3$ as well as three aggregated metrics (AOT40 for crops, AOT40 for forests and SOMO35) were calculated for the period 2000-2019. For the high percentiles as well as for the three aggregated metrics both the model values and the observations show a decrease during this period when averaged over the stations. The observations show a mean decrease of 0.5-1.5 \% $yr^{-1}$ relative to 2000 over this 20 years period for the three aggregated metrics while the model calculates somewhat larger reductions, of the order of 0.9-2\% $yr^{-1}$. For the 99th percentile of the annual daily maximum values, corresponding to the 4th highest ozone concentration, the mean of the observed and modelled values agree very well for sites north of 49 \degrees N, both showing a reduction of the order of 0.5  \% $yr^{-1}$ relative to 2000. For sites south of 49 \degrees N the observations show a similar relative reduction on average whereas the model calculates stronger reductions. Comparisons of the observed and modelled absolute concentration levels of O$_3$ reveal that the model underpredicts the high percentile and overpredicts the AOT40 levels. The underprediction increases with higher percentiles and is strongest for sites south of 49 \degrees N. The modelled downward trend in the high percentiles is, however, of the same order if comparing absolute levels. For SOMO35, the trend in the model values agrees well with the observed levels.
 
-For stations north of 49 \degrees N ..
+Comparison of trends in measured and modelled VOCs is not included in this report. The main reasons being the lack of established procedures for doing such a comparison as well as the lack of proper monitoring sites with sufficient data capture and sufficient homogeneity in the monitoring. The lumped VOCs in the model could not be compared directly with measured species. The topic of  
+
 
 
 %Exceedances of critical loads Hilde
