--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -607,7 +607,7 @@ The observations and model simulations indicate more sites with significant tren
 PM is a complex pollutant, consisting of aerosol species both emitted
 directly and formed from gaseous precursors.Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions are contribute to decrease PM concentrations. In the western parts of EMEP (EU \&UK \&EFTA), where the considered sites are located, the emissions of primary \PM[10] and \PM[2.5] were reduced by 32 and 35 \%, respectively, from 2000 to 2019. The largest in the same period was the reduction in \sox emissions (81 \%), resulting in 61 \% observed decrease of \soiv (70 \% according to the model). Following the reduction of \noii emissions by 48 \%, observed \noiii concentrations decreased slightly less, i.e. by 38 \% (44 \% according to the model). This was partly due to a rather moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate. 
 
-\COMMENT{Though \noii was reduced by 48 \%, given the moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate, the observed decrease in \noiii concentrations was only 38 \% (44 \% by the model)}
+\COMMENT{Though \noii was reduced by 48 \%, given the moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate, the observed decrease in \noiii concentrations was only 38 \% (44 \% by the model).}
  The corresponding changes from 2000 to 2019 in \nhiv were 50 and 48 \%. Due to the lack of consistent observational data for carbonaceous aerosols in the 2000s, the trends of elemental (EC) and organic (OC) carbon have only been analysed for a 2010-2019 period (see discussion in \ref{sec:trendsECOC}). The examples of the changes in the chemical composition of \PM[2.5] from 2000(2002) to 2019 are given on Figure \ref{fig:KEX4} for the only six sites with enough measurements for deriving the mass balance. 
 
 Summarizing trend results for the 2000-2019 period, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing. Significant trends have been estimated from observational data for 78 \% of sites for \PM[10] and 84 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively. During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (36 \% from model simulations) on average at the considered sites. The average observed decrease of \PM[2.5] is 46 \%  (48 \% estimated by the model). We find quite a good correspondence between observed and model simulated trends in PM concentrations. 
@@ -829,7 +829,7 @@ Autumn &              15 &          8 &          11 &                  -0.023 & 
 
 
 
-\subsection{Organic Carbon}
+\subsection{Organic Carbon, OC}
 \label{ss:trendsOC}
  
  Table~\ref{tab:KEX2} presents the absolute and relative changes in OC over 2010-2019 from 15 EMEP sites, as annual values and with confidence intervals, and from both observed and modelled values. The spatial variation of these trends for summer and winter can be seen as `arrow' plots in Fig.~\ref{fig:OCarrows}, and Fig.\ref{fig:OCtrends} shows again the annual trends, but superimposed upon the modelled field of modelled OC.
@@ -863,7 +863,7 @@ observed only for Ispra.
 Figure~\ref{fig:OCarrows} makes it clear that there were large differences in both sign and magnitude of the summertime trends in OC at individual sites, in both modelled and observed results. For the winter trends, Fig.~\ref{fig:OCarrows} shows that essentially all observed wintertime trends were reductions, whereas the modelled trends were more variable and less significant. In summertime the trends can be positive or negative, and are generally not significant.
 
 
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. For OC the model substantially underpredicts the yearly concentrations over the whole period (see also Tab.~\ref{tab:KEX2}), and also underpredicts the trends. There is substantial seasonal variation though. Observed reductions in winter (DJF) of -4.2~\%/yr are are not reproduced by the model at all (-1.1~\%/yr), though even in winter the observed trends were only significant for six of the 15 sites. In summer the observed trends are very small but negative (-0.03~\%/yr), whereas the model suggests positive trends of 2.1~\%/yr. As noted above (c.f. Fig.~\ref{fig:OCarrows}), the summer trends are very different for individual sites, even with respect to the sign of the change, and one cannot assign much significance to the changes. 
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. For OC the model substantially underpredicts the yearly concentrations over the whole period (see also Tab.~\ref{tab:KEX2}), and also underpredicts the trends. There is substantial seasonal variation though. Observed reductions in winter (DJF) of -4.2~\%/yr are not reproduced by the model at all (-1.1~\%/yr), though even in winter the observed trends were only significant for six of the 15 sites. In summer the observed trends are very small but negative (-0.03~\%/yr), whereas the model suggests positive trends of 2.1~\%/yr. As noted above (c.f. Fig.~\ref{fig:OCarrows}), the summer trends are very different for individual sites, even with respect to the sign of the change, and one cannot assign much significance to the changes. 
 
 The model calculated a
 reduction in OC of -0.6~\%/yr considering all sites, which was noticeably
@@ -945,7 +945,7 @@ Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} 
  & & & & \\
 %\multicolumn{5}{c}{Revised from Wenche 26/8/21} \\
 EC   & annual  & -3.0 (0.043)        &  -2.21 (0.034)   & -4.24 (0.012) \\
-OC   & annual  &  -0.44 (0.876)      &   0.18 (1)     & -0.64 (1)   \\
+OC   & annual  &  -0.44 (0.876)      &   0.18 (--)$^{(b)}$     & -0.64 (--)   \\
 Levoglucosan & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) \\
 & & & & \\
 \bottomrule 
@@ -955,14 +955,11 @@ Levoglucosan & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) 
 Notes:
 (a) Values for 2008-2018 use same procedure as for 2008-2019 and 2010-2019.
 Due to minor screening differences, numbers
-differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2~\%/yr for EC and -2.8~\%/yr for levoglucosan.\\
-\SKIP{ISSUES:\\ Explain diffs to Yttri et al 2021 and 2008-2018 trends better?\\
-p-values of 1 look odd. Do we have any good words for this?}\\
+differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2~\%/yr for EC and -2.8~\%/yr for levoglucosan;
+(b) dash (--) indicates highly insignificant p-value.\\
 }
 \end{table}
 
-%IN PROGRESS...
-%Larger differences are seen in the absolute changes (which may reflect the %difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 
 The 2010-2019 reduction of 4.2~\%/yr in observed EC across all seasons is rather dramatic, though as noted above a different choice of time-window might suggest a lower magnitude of changes. 
 As discussed in Sect.~\ref{ss:trendsEC} there is only a minor seasonal variability in the reduction of EC. This partly reflects the minor seasonal variability in most EC sources, but it is puzzling since residential heating (in GNFR sector C) should have clear winter maxima. \citet{Yttri2021} found that the reduction in EC
@@ -992,9 +989,9 @@ The issues with condensable organics (Sect.~\ref{ss:IssuesECOC}) impact these es
 
 %caution should be made drawing firm conclusions from such short time series as those %presented here\COMMENT{ Yes!}, illustrated by the different reductions calculated for %levoglucosan for 2008--2018 and for 2010--2019.
 
-We can note that \citet{Yttri2021} also found a statistically significant downward trend of similar magnitude
+We can note that \citet{Yttri2021} also found a statistically significant trend of similar magnitude and sign
 (-4.2~\%/yr)  for EC for 2010--2019 as for 2001--2018
-for the Norwegian Birkenes Observatory. This suggests a large-scale reduction in EC emissions.
+for the Norwegian Birkenes Observatory. As this site has a footprint that covers{\it ibid.}), this consistency suggests a large-scale reduction in EC emissions over the ten years.
 
 \SKIP{Influenced by
 major anthropogenic emission regions in Europe, this finding indicates a
@@ -1036,7 +1033,7 @@ all over Europe in the heating season
 At the Birkenes
 Observatory the winter-time reduction in OC (-4.1~\%/yr) was only somewhat
 lower than for EC (-6.4~\%/yr) and levoglucosan (-4.6~\%/yr).
-\COMMENT{
+\SKIP{
   Karl Espen - where are these numbers coming from? Different to those in Tab.~\ref{tab:BirkenesTrends}
 }
 These results also suggest
@@ -1045,7 +1042,7 @@ effective for Europe in general, taking into account the considerations
 made about the length of the time series and the Birkenes Observatory as
 an indicator of European emissions (Sect.~\ref{ss:trendsEC}).  
 
-The underprediction of the OC levels in wintertime seen in Figs.~\ref{fig:KEX1} should not be taken as a indication that the EMEP model itself is wrong, but is rather at leasy partly the result of the issues with missing `condensable' organics (Sect.~\ref{ss:IssuesECOC}). It has been demonstrated elsewhere that model results improve substantially when condensables are included \citep{DeniervanderGon2015,R2019:SVOC,R2020:SVOC}. Unfortunately we do not yet have a time-series of condensable organic emissions with which to perform trend analysis, but we hope to address that within the context of a new MSC-W led project funded by the Nordic Council of Ministers.
+The underprediction of the OC levels in wintertime seen in Figs.~\ref{fig:KEX1} should not be taken as a indication that the EMEP model itself is wrong, but is rather at least partly the result of the issues with missing `condensable' organics (Sect.~\ref{ss:IssuesECOC}). It has been demonstrated elsewhere that model results improve substantially when condensables are included \citep{DeniervanderGon2015,R2019:SVOC,R2020:SVOC}. Unfortunately, we do not yet have a time-series of condensable organic emissions with which to perform trend analysis, but we hope to address that within the context of a new MSC-W led project funded by the Nordic Council of Ministers.
 
 \SKIP{
 A pronounced influence of natural sources in areas
@@ -1108,9 +1105,9 @@ the pattern seen at all other sites where the decrease in EC/\pmfine $>$
 OC/\pmfine.
 
 \begin{figure}
-\includegraphics[width=16cm]{FIGS_TRENDS/Composition_4sites.png}
+\includegraphics[width=16cm]{FIGS_TRENDS/Compostion_4sites_winter.png}
  \caption{
-  Mass balance of \pmfine at  Birkenes (NO02), Diabla Gora
+  Mass balance of wintertime \pmfine at  Birkenes (NO02), Diabla Gora
   (PL05), Iskrba (SI08) and Ispra (IT04) including OM, EC, \ce{SO4^2-}, \ce{NO3^-}, \ce{NH4^+} from 
   observations (left), modelled (middle) and apportionment of eBC
   into biomass burning/solid fuel (\EBCff) and fossil fuel/liquid fuel
@@ -1125,7 +1122,7 @@ The relative contribution of carbonaceous aerosol, OM (assuming OM = OC $\times$
 and 1.7 for the other sites)
  and EC, to the \pmfine mass concentration along with the major
 SIA species illustrates the importance of the OM fraction for a further
-reduction in \pmfine mass concentration (Fig.~\ref{fig:KEX4}). As a first step,
+reduction in wintertime \pmfine mass concentration (Fig.~\ref{fig:KEX4}). As a first step,
 the natural and the anthropogenic fraction of the carbonaceous aerosol
 must be separated, then further into abatable categories. Separation of
 eBC into biomass burning/solid fuel (\EBCbb) and fossil fuel/liquid fuel
@@ -1186,22 +1183,22 @@ Obs.  &              15 &     2 &                  0.0001 &  (-0.003, 0.0032) & 
 \subsection{Trends in EC and OC, conclusions}
 \label{ss:trendsECOCconc}
 
-For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. It should be noted that this 10-year period is rather short for the calculation of robust trends (and we show that slightly different time-windows produce different statistics), and typically only a limited number of sites showed trends that were statistically significant even for a specific time-window. However, some features of the trend analysis seem rather consistent, and we summarise the main points here. 
+For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. It should be noted that this 10-year period is rather short for the calculation of robust trends (and we show that slightly different time-windows produce different statistics), and typically only a limited number of sites showed trends that were statistically significant for specific seasons, even for a specific time-window. However, some features of the trend analysis seem rather consistent, and we summarise the main points here. 
 
 A reduction (of ca. 4.5~\%/yr) in observed EC was found across 15 sites across Europe for the  period 
-2010--2019. The reduction in levoglucosan at the site Birkenes in southern Norway (which is significantly impacted by long-range transport of pollution from continental Europe) was found to be over 5\% also (though this number was very sensitive to the time-window), which suggests that emissions from residential wood combustion were reduced significantly over this period; this is also consistent with reported changes in the GNFR C emissions. However, observed EC reduction levels were rather similar in all seasons, which suggests that emissions abatement of EC has been successful across a range of emission sources. 
+2010--2019. The reduction in levoglucosan at the site Birkenes in southern Norway (which is significantly impacted by long-range transport of pollution from continental Europe) was found to be over 5\% also (though this number was very sensitive to the time-window), which suggests that emissions from residential wood combustion were reduced significantly over this period; this is also consistent with reported changes in the GNFR C emissions from some countries at least. However, observed EC reduction levels were rather similar in all seasons, which suggests that emissions abatement of EC has been successful across a range of emission sources. 
 
-In the winter season (DJF), reductions in observed EC and OC were very similar, with \mbox{-4.3~\%/yr} and -4.2~\%/yr respectively. Given that the winter OC concentrations are mainly determined by primary emissions and with minimal SOA contributions, this consistency of EC and OC reductions is also consistent with reductions in wintertime sources. Trends in observed OC in other seasons were however very mixed, with some stations showing increases, and others decreases, and with little statistical significance. This variability in station-to-station OC trends in other seasons reflects increasing contributions from SOA formation, which are sensitive to meteorological factors and biogenic emissions.
+In the winter season (DJF), reductions in observed EC and OC were very similar, with \mbox{-4.3~\%/yr} and -4.2~\%/yr respectively. Given that the winter OC concentrations are mainly determined by primary emissions and with minimal SOA contributions, this consistency of EC and OC reductions is also consistent with reductions in wintertime anthropogenic sources. Trends in observed OC in other seasons were however very mixed, with some stations showing increases, and others decreases, and with little statistical significance. This variability in station-to-station OC trends in other seasons reflects increasing contributions from SOA formation, which are sensitive to meteorological factors and biogenic emissions.
 
 The modelled trends in EC (reduction of ca. 4~\%/yr) were rather similar to the observed trends, also across all seasons, and the station-mean EC concentrations themselves were well reproduced by the model across the 10 year period. 
-For OC the model substantially underpredicts the yearly concentrations over the whole period, and also underpredicts the trends.  
+For OC, the model substantially underpredicts the yearly concentrations over the whole period, and also underpredicts the trends.  
 
-The underprediction of OC is however explainable by the omission of condensable organics in the reported \pmfine emissions from some countries (Sect.~\ref{ss:IssuesECOC}). Although emissions estimates which include condensables (the so-called REF2 or REF2.1, Sect.~\ref{sec:EmisSVOC}) are available and were used in the status and source-receptor calculations of this report, these emissions only exist for 2015; no time-series of REF2-type emissions yet exists. The lack of significance of the calculated OC trends may also be attributed to some extent to these problems with condensables. When some countries include, and some exclude, condensables, changes in modelled OC concentrations will be very sensitive to changes in the source areas for the POA emissions entering the model.
-Although modelling of EC is also impacted by the problems with condensables, the much better agreement found for wintertime EC levels than for OC probably reflects the fact that EC has a wider variety of emission sources in that season (e.g. vehicles) than OC, which is much more dominated by residential wood-burning.
+The underprediction of OC may partly be due to general difficulties with modelling SOA formation, but a major problem is the omission of condensable organics in the reported \pmfine emissions from many countries (Sect.~\ref{ss:IssuesECOC}). Although emissions estimates which include condensables (the so-called REF2 or REF2.1, Sect.~\ref{sec:EmisSVOC}) are available and were used in the status and source-receptor calculations of this report, these emissions only exist for 2015; no time-series of REF2-type emissions yet exists. The lack of significance of the calculated OC trends may also be attributed to some extent to these problems with condensables. When some countries include, and some exclude, condensables, changes in modelled OC concentrations will be very sensitive to changes in the source areas for the primary OC emissions entering the model.
+Although modelling of EC is also impacted by the problems with condensables (due to the use of OC/EC ratios when interpreting \pmfine emission speciation, see Sect.~\ref{ss:IssuesECOC}), the much better agreement found for wintertime EC levels than for OC probably reflects the fact that EC has a wider variety of emission sources in that season (e.g. vehicles) than OC, which is much more dominated by residential wood-burning.
 
 
-The EC fraction of \pmfine (\QUERY{trend }-2.4$\pm$1.1~\%/yr) decreased at all
-sites, and at a level equal to, or higher than, the \ce{SO4^2-} fraction. The
+The EC fraction of \pmfine  decreased at all
+sites (average of -2.4$\pm$1.1~\%/yr), and at a level equal to, or higher than, the \ce{SO4^2-} fraction. The
 change in OC fraction was more scattered with a substantial and
 consistent 4.5~\%/yr increase at the northernmost sites, whereas
 there was no increase or decrease (0.2$\pm$2.8~\%/yr) when considering
@@ -1249,8 +1246,8 @@ less than for the observations (-2.4~\%/yr). A similar underprediction
 was seen for each season, thereby reproducing the seasonality in trend
 seen for the observations.
 
-The EC fraction of \pmfine (\QUERY{trend }-2.4$\pm$1.1~\%/yr) decreased at all
-sites, and at a level equal to, or higher than, the \ce{SO4^2-} fraction. The
+The EC fraction of \pmfine decreased at all
+sites (-2.4$\pm$1.1~\%/yr), and at a level equal to, or higher than, the \ce{SO4^2-} fraction. The
 change in OC fraction was more scattered with a substantial and
 consistent 4.5~\%/yr increase at the northernmost sites, whereas
 there was no increase or decrease (0.2$\pm$2.8~\%/yr) when considering
