--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -120,16 +120,13 @@ The ozone observed at a surface station is the net result of various physio-chem
 
 There were four main ozone episodes in Europe in 2019 that occurred around days 23-28 in each of the months April, June, July and August and at a varying degree in different parts of the continent. Details for the first three of these episodes are discussed below. Extreme levels of ozone even exceeding EU's alert threshold of 240 \ug were observed in several countries as explained in more detail below.
 
-The April episode was linked to a blocking high pressure located over western parts of Russia and Belarus, setting up southeasterly winds bringing warm and dry continental air masses northwards particularly to the Baltic countries, Scandinavia and parts of the UK. At 25 April Northern Norway registered the second highest surface ozone level (82 ppb) since the start of the monitoring in 1990. Likely, agricultural fires in East Europe (Ukraine and Russia) contributed to the peak ozone levels. The modelled and observed daily maximum ozone levels for 24 April are shown in Figure~\ref{fig:O3_20190424}. 
-
-
 \begin{figure}[H]
   \centering{\includegraphics[clip=,angle=90,height=7.5cm,viewport=105 58 510 775]{FIGS_O3/20190424_MAXO3_ModObs_emep_H500.pdf}}
 \caption{Modelled and measured daily max ozone [ppb] 24 April 2019.}
 \label{fig:O3_20190424}
 \end{figure}
 
-June 2019 was the warmest June on record, globally as well as for Europe (\citep{Bissolli:2020}). During 26-28 June a persistent high pressure over central Europe brought very hot air masses into central and western parts of the continent. In Germany, temperatures just below 40 \degrees C was observed and in France 13 stations surpassed France’s 2003 records, exceeding a temperature of 44.1 \degrees C. Surface ozone levels above EU's information threshold (180 \ug) were observed in many countries during this period. At Ispra in Italy an extreme level of 142 ppb (285 \ug) was reported on 28 June, breaking EU's alert threshold of 240 \ug. Figure~\ref{fig:O3_20190628} shows the modelled and observed daily maximum ozone levels for 28 June. 
+The April episode was linked to a blocking high pressure located over western parts of Russia and Belarus, setting up southeasterly winds bringing warm and dry continental air masses northwards particularly to the Baltic countries, Scandinavia and parts of the UK. At 25 April Northern Norway registered the second highest surface ozone level (82 ppb) since the start of the monitoring in 1990. Likely, agricultural fires in East Europe (Ukraine and Russia) contributed to the peak ozone levels. The modelled and observed daily maximum ozone levels for 24 April are shown in Figure~\ref{fig:O3_20190424}. 
 
 \begin{figure}[H]
   \centering{\includegraphics[clip=,angle=90,height=7.5cm,viewport=105 58 510 775]{FIGS_O3/20190628_MAXO3_ModObs_emep_H500.pdf}}
@@ -137,13 +134,16 @@ June 2019 was the warmest June on record, globally as well as for Europe (\citep
 \label{fig:O3_20190628}
 \end{figure}
 
-One month later, during 24-26 July a new and even more intense (albeit shorter) heat wave struck central and northwestern part of Europe, and national temperature records were set in the UK and Germany (38.7 \degrees C in the UK and 40.5 \degrees C in Germany). Along with this heat wave, peak ozone levels were measured. In the UK, an hourly maximum level of 119 ppb (238 \ug) was observed at Sibton 25 July, the highest level measured at this site since 1996. At Vredepeel in the Netherlands, the ozone levels peaked at 127 ppb (254 \ug) on the same day and thereby broke EU's alert threshold. The extent of the ozone episode on 25 July is seen on Figure~\ref{fig:O3_20190725}, showing the modelled and observed values. 
+June 2019 was the warmest June on record, globally as well as for Europe \citep{Bissolli:2020}. During 26-28 June a persistent high pressure over central Europe brought very hot air masses into central and western parts of the continent. In Germany, temperatures just below 40 \degrees C was observed and in France 13 stations surpassed France’s 2003 records, exceeding a temperature of 44.1 \degrees C. Surface ozone levels above EU's information threshold (180 \ug) were observed in many countries during this period. At Ispra in Italy an extreme level of 142 ppb (285 \ug) was reported on 28 June, breaking EU's alert threshold of 240 \ug. Figure~\ref{fig:O3_20190628} shows the modelled and observed daily maximum ozone levels for 28 June. 
 
 \begin{figure}[H]
   \centering{\includegraphics[clip=,angle=90,height=7.5cm,viewport=105 58 510 775]{FIGS_O3/20190725_MAXO3_ModObs_emep_H500.pdf}}
 \caption{Modelled and measured daily max ozone [ppb] 25 July 2019.}
 \label{fig:O3_20190725}
 \end{figure}
+
+One month later, during 24-26 July a new and even more intense (albeit shorter) heat wave struck central and northwestern part of Europe, and national temperature records were set in the UK and Germany (38.7 \degrees C in the UK and 40.5 \degrees C in Germany). Along with this heat wave, peak ozone levels were measured. In the UK, an hourly maximum level of 119 ppb (238 \ug) was observed at Sibton 25 July, the highest level measured at this site since 1996. At Vredepeel in the Netherlands, the ozone levels peaked at 127 ppb (254 \ug) on the same day and thereby broke EU's alert threshold. The extent of the ozone episode on 25 July is seen on Figure~\ref{fig:O3_20190725}, showing the modelled and observed values. 
+
 
 For the year 2019 as a whole, Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics with the corresponding measured metrics based on the EMEP measurement sites plotted on top of the maps. Only stations located below 500 metres above sea level were used in this comparison to avoid uncertainties related to the extraction of model data in regions with complex topography. Figure ~\ref{fig:indicators_emep} shows a) maxO3 (= mean of the daily max ozone concentration) for the 6-month period April-September, b) SOMO35 (= Sum of Ozone Means Over 35 ppb), c) AOT40 for forests (= Accumulated Ozone exposure over a Threshold of 40 ppb) for the 6-month period April-September using the hours between 08 and 20, and Figure~\ref{fig:indicatorPOD} shows POD$_1$ for forests (= Phytotoxic Ozone Dose above a threshold 1 mmol m$^{-2}$). Figure~\ref{fig:indicatorPOD} shows only modelled POD$_1$ since measurements could not be calculated from the ozone monitoring data directly and could not be included.
 
