Update on Overleaf.

--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -147,8 +147,6 @@ One month later, during 24-26 July a new and even more intense (albeit shorter) 
 
 For the year 2019 as a whole, Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics with the corresponding measured metrics based on the EMEP measurement sites plotted on top of the maps. Only stations located below 500 metres above sea level were used in this comparison to avoid uncertainties related to the extraction of model data in regions with complex topography. Figure ~\ref{fig:indicators_emep} shows a) maxO3 (= mean of the daily max ozone concentration) for the 6-month period April-September, b) SOMO35 (= Sum of Ozone Means Over 35 ppb), c) AOT40 for forests (= Accumulated Ozone exposure over a Threshold of 40 ppb) for the 6-month period April-September using the hours between 08 and 20, and Figure~\ref{fig:indicatorPOD} shows POD$_1$ for forests (= Phytotoxic Ozone Dose above a threshold 1 mmol m$^{-2}$). Figure~\ref{fig:indicatorPOD} shows only modelled POD$_1$ since measurements could not be calculated from the ozone monitoring data directly and could not be included.
 
-These plots indicate good agreement between these modelled and measured ozone metrics in general. The model and the measurements show an increasing gradient to the southeast as expected which reflects the strong dependency between surface ozone, temperature and solar radiation. 
-
 \begin{figure}[H]
   \centering
   \subfigure[maxO3]{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/MAXO3_AprSep_ModObs_emep_EMEP01.pdf}}
@@ -159,9 +157,7 @@ These plots indicate good agreement between these modelled and measured ozone me
 \end{figure}
 
 
-It should be noted that the O$_3$ metrics such as AOT40 are very sensitive to the calculation of vertical O$_3$ gradients between the middle of the surface layer and the 3m height used for comparison with measurements \citep{Tuovinen:EP2007} and thus more difficult to compare with measurement data than, e.g., the mean daily maximum. Indeed, the formulation we use \citep{Simpson:EMEP2012} is probably better suited to a lowest model layer of 90m thickness (since we equate the centre of this, ca. 45m, with a `blending-height') than to a lowest model layer of 50m thickness (as used throughout this report). 
-The modelled POD$_1$ pattern differs from the other metrics reflecting the influence of additional parameters such as plant physiology, soil moisture etc., and is a metric more indicative of the direct impact of ozone on vegetation than, e.g., AOT40. The POD$_1$ field could, however, not be validated by the EMEP ozone measurement data alone. 
-
+These plots indicate good agreement between these modelled and measured ozone metrics in general. The model and the measurements show an increasing gradient to the southeast as expected which reflects the strong dependency between surface ozone, temperature and solar radiation. 
 
 \begin{figure}[H]
   \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/POD1f_ModObs_emep_EMEP01.pdf}}
@@ -169,6 +165,8 @@ The modelled POD$_1$ pattern differs from the other metrics reflecting the influ
 \label{fig:indicatorPOD}
 \end{figure}
 
+It should be noted that the O$_3$ metrics such as AOT40 are very sensitive to the calculation of vertical O$_3$ gradients between the middle of the surface layer and the 3m height used for comparison with measurements \citep{Tuovinen:EP2007} and thus more difficult to compare with measurement data than, e.g., the mean daily maximum. Indeed, the formulation we use \citep{Simpson:EMEP2012} is probably better suited to a lowest model layer of 90m thickness (since we equate the centre of this, ca. 45m, with a `blending-height') than to a lowest model layer of 50m thickness (as used throughout this report). 
+The modelled POD$_1$ pattern differs from the other metrics reflecting the influence of additional parameters such as plant physiology, soil moisture etc., and is a metric more indicative of the direct impact of ozone on vegetation than, e.g., AOT40. The POD$_1$ field could, however, not be validated by the EMEP ozone measurement data alone. 
 
 SOMO35 is an indicator for health impacts recommended by WHO, and the results given in Figure~\ref{fig:indicators_emep} indicate that the health risk associated with surface ozone increased towards southern Europe. Highest levels are seen in the Mediterranean area and Northern Italy. SOMO35 is a health risk indicator without any specific threshold or limit value.
 
@@ -237,8 +235,8 @@ Figure~\ref{fig:PManomin2019} presents the relative anomalies of mean \PM[10] an
 In this section we compare \PM[10] and \PM[2.5] exceedances
 of EU critical limits and WHO recommended Air Quality
 Guidelines \citep{WHO:AQG}, calculated by the EMEP MSC-W model, with
-those measured at EMEP sites. The EU limit values for \PM[10] (Council
-Directive 1999/30/EC) are 40 \ug for the annual mean and 50 \ug for
+those measured at EMEP sites. The EU limit values (Council 
+Directive 1999/30/EC) for \PM[10] are 40 \ug for the annual mean and 50 \ug for
 the daily mean concentrations, with the daily limit not to be exceeded
 more than 35 times per calendar year~\citep{EU2008}. For \PM[2.5], the
 annual mean limit value of 25 \ug entered into force on 01.01.2015.
